adding validation in user mapper so that when logs are null it wont cause a null pointer